
[v1.1.2p19a]
- Bugfix: when adding an action to an existing dropdown-menu, then the action was always added at the end of the menu
- Bugfix (provided by Nicolas Roduit): properly read java version specification number of Java 9 (see "DockUI.registerColors")
- Feature (provided by Nicolas Roduit): new and better translations for various languages

[v1.1.2p19b]
- Bugfix: memory leak fixed, that was caused by a listener created by the "AbstractTabLayoutManagerPane". The listener was never removed properly. Thanks mattbru2 for finding the bug!

[v1.1.2p19c]
- Bugfix: disabled icon of DockActions was converted to gray twice, making them hard to read and also overriding the (not gray) icon that might be set by the client. Thanks Thomas for finding this bug.
- Bugfix: disabled icon of DockActions was not painted in drop-down-menus

[v1.1.2p19d]
! Bugfix: CControlPerspectiveBlop writeXML/write was not symmetrical with readXML/read
- Bugfix: An ApplicationResourceManager that read some unknown resources from a file may write them back in any file that is created

[v1.1.2p19e]
! API: converted some inner interfaces to outer classes to work around https://bugs.eclipse.org/bugs/show_bug.cgi?id=527731

[v1.1.2p20a]
- API: By Zilvinas: Java9Workaround provides support for transparency when running DockingFrames in Java 9.
- Bugfix: Java6Workaround uses reflection to load AWTUtilities. Jigsaw should no longer complain when loading this class.

[v1.1.2p20b]
- Bugfix: fixed by peterk: AbstractSplitDockGrid.addPlaceholders did not copy an array correctly, leading to null stored in the array.

[v1.1.2p20c]
- Bugfix: When removing a DockStation from a SplitDockStation, its PlaceholderMap was lost if the Leaf-Object (part of the SplitDockStation) did not have placeholders of its own. Now the Leaf copies the placeholders of the removed station - if they are not already stored elsewhere in the SplitDockStation.