@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.dockingframes</groupId>
 		<artifactId>docking-frames-base</artifactId>
-        <version>1.1.2-P20b</version>
+        <version>1.1.2-P20c</version>
 	</parent>
 
 	<artifactId>docking-frames-core</artifactId>
