@@ -11,7 +11,7 @@
 
 	<groupId>org.dockingframes</groupId>
 	<artifactId>docking-frames-base</artifactId>
-	<version>1.1.2-P20b</version>
+	<version>1.1.2-P20c</version>
 	<packaging>pom</packaging>
 
 	<modules>
